click row to show detail

--- a/vue_application/Ransomware Hunter/src/assets/main.css
+++ b/vue_application/Ransomware Hunter/src/assets/main.css
@@ -1,4 +1,5 @@
-@import './base.css';
+/* default css */
+/* @import './base.css';
 
 #app {
   max-width: 1280px;
@@ -32,4 +33,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
